data/rules.v4
# Generated by iptables-save v1.8.2 on Thu Jun 11 13:02:56 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [100:9954]
:TCP - [0:0]
:UDP - [0:0]
:sshguard - [0:0]
-A INPUT -i lo -m addrtype --src-type LOCAL -j ACCEPT
-A INPUT -m addrtype --dst-type LOCAL -j sshguard
-A INPUT -m addrtype --dst-type LOCAL -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m addrtype --dst-type LOCAL -m state --state INVALID -j LOG --log-prefix "INPUT INVALID: " --log-level 6 --log-uid
-A INPUT -m addrtype --dst-type LOCAL -m state --state INVALID -j DROP
-A INPUT -p icmp -m addrtype --dst-type LOCAL -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -p udp -m addrtype --dst-type LOCAL -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m addrtype --dst-type LOCAL -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -j LOG --log-prefix "INPUT: " --log-level 6 --log-uid
-A INPUT -p udp -m addrtype --dst-type LOCAL -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m addrtype --dst-type LOCAL -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
-A FORWARD -j LOG --log-prefix "FORWARD: " --log-level 6 --log-uid
-A TCP -p tcp -m addrtype --dst-type LOCAL -m multiport --dports 22,53,80,443 -j ACCEPT
-A UDP -p udp -m addrtype --dst-type LOCAL -m multiport --dports 53 -j ACCEPT
COMMIT
# Completed on Thu Jun 11 13:02:56 2020
# Generated by iptables-save v1.8.2 on Thu Jun 11 13:02:56 2020
*nat
:PREROUTING ACCEPT [44:12542]
:INPUT ACCEPT [2:396]
:OUTPUT ACCEPT [335:34437]
:POSTROUTING ACCEPT [36:2663]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Jun 11 13:02:56 2020
